--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,3 +100,56 @@ footer h3{
     font-weight: lighter;
     text-align: center;
 }
+
+/* Media query for tablets or smaller */
+@media screen and (max-width: 872px) {
+    /* left side */
+.left-title{
+    
+    margin: 0;
+    text-align: center;
+    padding-right: 0px;
+}
+
+/* about */
+.about p{
+    margin: 0;
+    text-align: center;
+    
+}
+
+.about{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+/* work */
+.work{
+    display: flex;
+    flex-direction: column;
+}
+
+.work-grid-container{
+    display: flex;
+    flex-direction: column;
+}
+
+.work-grid-contaier > div{
+    margin: 25px;
+    padding: auto ;
+}
+.grid-item1{
+    grid-column-start: auto;
+    grid-column-end: auto;
+}
+
+/* contact */
+.contact{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+}
