fixed email's margin

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,7 +98,7 @@ header nav ul li{
 .grid-item1{
     grid-column-start: 1;
     grid-column-end: 3;
-    background-image: url(../images/Spelling\ Bee\ Screenshot.png);
+    background-image: url(../images/Spelling_Bee_Screenshot.png);
     background-size: 425px;
 }
 
