--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@ a {
 }
 
 body{
-    font-family:'Courier New', Courier, monospace;
+    font-family:'times new roman', serif;
     background-color:rgb(250, 250, 250);
 }
 
@@ -102,6 +102,11 @@ header nav ul li{
     background-size: 425px;
 }
 
+.grid-item2 {
+    background-image: url(../images/LearnIt-Homepage.png);
+    background-size: 280px;
+}
+
 /* contact */
 .contact-content{
     display: flex;
@@ -110,8 +115,8 @@ header nav ul li{
 }
 
 /* footer */
-footer h3{
-    font-weight: lighter;
+footer p{
+    font-weight: 12px;
     text-align: center;
 }
 
